--- a/فازر XSS.html
+++ b/فازر XSS.html
@@ -703,7 +703,7 @@ table.blueTable thead th:first-child {
 
                     <tr id="run_nr_iframes_payload">
                         <td style="border:none;font-family: b titr;font-size: 18px;">
-                            عامل خرابکاری<br> (PAYLOAD) 
+                            عامل خرابکاری<br> [SAVE_PAYLOAD] 
                         </td>
                         <td style="border:none">
                             <input type="text" style="width: 300px;font-family: ariial;font-size: 21px;" id="save_payload" value="alert(1)">
