--- a/فازر XSS.html
+++ b/فازر XSS.html
@@ -702,7 +702,7 @@ table.blueTable thead th:first-child {
                     </tr>
 
                     <tr id="run_nr_iframes_payload">
-                        <td style="border:none;font-family: b titr;font-size: 18px;">
+                        <td style="border:none;font-family: b titr;font-size: 18px; text-align: center;">
                             عامل خرابکاری<br> [SAVE_PAYLOAD] 
                         </td>
                         <td style="border:none">
